# SceneAPI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSING.md  NOTICE  README.md  SFMAPI-SPEC.md  pyproject.toml  renovate.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: bench.yml  ci.yml  compat.yml  conformance.yml  docs.yml  helm.yml  hub-install.yml  publish.yml  python-sdk.yml  release-drafter.yml  release.yml  ts-sdk.yml  worker-tests.yml
alembic/: env.py
alembic/versions/: 0001_phase0_initial.py  0002_phase1_jobs.py  0003_phase3_masksets_models.py  0004_phase5_auth_quotas.py  0005_phase5_pinned.py  0006_image_pose_prior.py  0007_task_state_json.py  0008_runtime_version_collapse.py  0009_stage_artifacts.py  0010_radiance_fields.py  0011_radiance_evaluation_provider_length.py  0012_task_status_lease_index.py
app/: __init__.py  cli.py  main.py  plugin_server.py  scaffolding.py
app/adapters/: backend.py  backend_actions.py  backend_artifacts.py  backend_config.py  backend_contract.py  colmap_backend.py  export_formats.py  progress.py  registry.py  stub_backend.py
app/core/: action_signatures.py  artifacts.py  attributes.py  camera_models.py  capabilities.py  colmap_actions.py  colmap_db.py  config.py  config_stages.py  datatypes.py  errors.py  ids.py  operations.py  optional_deps.py  path_safety.py  paths.py  pipelines.py  processors.py  profiling.py  projection_engine.py  projections.py  public_outputs.py
app/db/: models.py
app/mcp/: __init__.py  __main__.py  server.py  tools.py
app/orchestrator/: dag.py  janitor.py  queue.py  resume.py  scheduler.py
app/schemas/: depth_map_binary.py  pipeline_spec.py  progress_event.py
app/services/: artifact_conversion_service.py  artifact_service.py  backend_action_service.py  dataflow_registry_service.py  dataset_service.py  image_bytes_service.py  image_service.py  job_progress_service.py  job_service.py  oneshot_service.py  plugin_service.py  project_service.py  provider_routing_service.py  radiance_service.py  reconstruction_service.py  runtime_version_service.py  sfm_stage_service.py  similarity_service.py  upload_service.py
app/storage/: blobs.py  observations.py  pose_graph_emit.py  similarity.py  snapshot_emit.py  thumbs.py  vlad.py
app/workers/: _materialize.py  dispatcher.py  options.py  progress.py
bench/: __init__.py  _sdk.py  cli.py  harness.py  metrics.py  store.py
clients/cpp/: README.md
deploy/: .env.example  Dockerfile.web  README.md  bootstrap-worker.ps1  docker-compose.yml  install-worker.ps1
docs/: .gitignore  conf.py  index.md
docs/_internal/: container_plugin_runtime_checklist.md  contract_plane_proposal.md  gap_closure_checklist.md  oneshot_streaming_proposal.md  plugin_hub_checklist.md  plugin_runtime_api_gap_closure_checklist.md  resume_unification_proposal.md  rls_postgres_tenancy_proposal.md  sceneapi_migration_proposal.md  sealed_snapshots_on_s3_proposal.md  streaming_slam_proposal.md
docs/_static/: custom.css  openapi.json
docs/guides/: aip_audit_2026.md  architecture.md  backend_implementations.md  container_plugin_runtime_checklist.md  contributing.md  decisions.md  gap_closure_checklist.md  in_memory_reconstruction_proposal.md  jobs_and_progress.md  lean_audit_2026.md  mcp.md  multitenancy.md  oneshot_streaming_proposal.md  plugin_hub_checklist.md  quickstart.md  real_engine_testing.md  release_policy.md  storage.md
docs/reference/: api.md  auth.md  cli.md  configuration.md  curl_tour.md  errors.md  job_configuration.md  matching_models.md  openapi.md
docs/sdk/: async.md  errors.md  index.md  models.md  sync.md
docs/server/: adapters.md  orchestrator.md  services.md  storage.md  workers.md
sceneapi/: __init__.py  backends.py  errors.py  plugin_service.py  runtime.py  testing.py
sceneapi/contracts/: __init__.py  colmap_db.py
sceneapi/server/: __init__.py  cli.py  main.py  plugin_server.py  scaffolding.py
scripts/: dump_openapi.py  multi_plugin_demo.py  regen_sdk.py  smoke.ps1  smoke.sh  test_dual_db.ps1  test_dual_db.sh  test_postgres_local.ps1  test_postgres_local.sh
sfm_hub/: __init__.py  container_runtime.py  discovery.py  doctor.py  install.py  models.py  provision.py  routing.py  state.py
sfm_hub/models/: __init__.py  dataflow.py  manifest.py  runtime.py  validation.py
sfm_hub/registry/: __init__.py
sfm_hub/schemas/: backend-plugin.schema.json
sfmapi/: __init__.py  backends.py  errors.py  plugin_service.py  runtime.py  testing.py
sfmapi/contracts/: __init__.py
sfmapi/server/: __init__.py  cli.py  main.py  plugin_server.py  scaffolding.py
src/sceneapi/: __init__.py
tests/: conftest.py  test_import.py
tests/conformance/: conftest.py  runner.py  test_capabilities.py  test_dataflow.py  test_dataset_lifecycle.py  test_jobs_and_lro.py
tests/contract/: conftest.py  test_a_record_fixtures.py  test_b_python_sdk_decodes_fixtures.py  test_c_openapi_typing_guards.py  test_d_generated_sdk_decodes_fixtures.py  test_e_generated_ergonomics.py  test_f_golden_points_parity.py  test_mcp_parity.py  test_version_coherence.py
tests/e2e/: test_auth_api.py  test_capabilities_api.py  test_dataflow_api.py  test_dataset_from_archive_api.py  test_datasets_api.py  test_dense_api.py  test_jobs_api.py  test_localize_api.py  test_pipeline_run_api.py  test_pipelines_api.py  test_pose_priors_api.py  test_radiance_api.py  test_reconstructions_api.py  test_render_cubemap_api.py  test_request_profiling.py  test_request_strictness.py  test_resume_api.py  test_similarity_api.py  test_tiles_and_observations_api.py  test_to_cubemap_api.py
tests/integration/: test_auth_api_keys.py  test_blob_store.py  test_cancel.py  test_db_dual.py  test_ephemeral_mode.py  test_fair_share.py  test_gc.py  test_janitor.py  test_lease.py  test_local_source.py  test_mapping_input.py  test_oneshot_features_api.py  test_oneshot_localize_api.py  test_provider_plumbing.py  test_quotas.py  test_resume.py  test_runner_inline.py  test_runtime_version.py  test_s3_source.py  test_scheduler_readiness.py  test_snapshots.py  test_storage_models.py
(+550 files in other folders)
