[project]
name = "sfmapi"
version = "0.0.1"
description = "Generic HTTP/REST API for Structure-from-Motion tasks. Backend-agnostic; reference implementation uses pycolmap."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "arq>=0.26",
    "redis>=5.2",
    "python-ulid>=3.0",
    "httpx>=0.28",
    "anyio>=4.6",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.20",
    "pillow>=11",
    "numpy>=2.0",
    "structlog>=24.4",
    "orjson>=3.10",
    "boto3>=1.36",
    "prometheus-client>=0.21",
]

[project.scripts]
sfmapi = "app.cli:main"
sfmapi-mcp = "app.mcp.server:main"

[project.optional-dependencies]
# sfmapi ships no concrete SfM backend; install a third-party
# package implementing `app.adapters.backend.SfmBackend` and
# register it at app startup. This `pyproject.toml` does not
# declare any backend or segmentation dependency on purpose —
# they all belong in separate packages.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "freezegun>=1.5",
    "respx>=0.21",
    "moto[s3]>=5.0",
]
mcp = [
    "fastmcp==3.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast, no IO",
    "integration: hits db / fs",
    "e2e: full app, may hit redis",
    "conformance: tests/conformance — verifies SFMAPI-SPEC.md against any server",
    "contract: tests/contract — replays recorded fixtures through the SDK types",
    "needs_backend: requires a concrete SfmBackend implementation registered (sfmapi ships only a stub)",
    "needs_postgres: requires SFMAPI_DB_URL pointing at postgres",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
# B008 = function call in default arg (FastAPI requires `Depends(...)` etc.).
# UP046 = `class Foo(Generic[T])` is the only Pydantic-compatible form pre-PEP 695.
ignore = ["E501", "B008", "UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

# sfmapi proper imports no engine library, so no mypy overrides
# for them are needed. Backend packages handle their own type
# stubs.
