[project]
name = "sceneapi"
version = "0.1.0"
description = "Generic HTTP/REST API and wire contract for Structure-from-Motion tasks."
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "sceneapi-io>=0.2,<0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "arq>=0.26",
    "redis>=5.2",
    "python-ulid>=3.0",
    "httpx>=0.28",
    "anyio>=4.6",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.20",
    "numpy>=2.0",
    "structlog>=24.4",
    "orjson>=3.10",
    "boto3>=1.36",
    "prometheus-client>=0.21",
]

[project.scripts]
sceneapi = "sceneapi.server.cli:main"
sceneapi-mcp = "sceneapi.server.mcp.server:main"
# Deprecated alias scripts (one release, removed in 0.2.0): same mains,
# old names — keeps existing operator muscle memory / launchers working.
sfmapi = "sceneapi.server.cli:main"
sfmapi-mcp = "sceneapi.server.mcp.server:main"

[project.optional-dependencies]
# sceneapi ships no concrete SfM backend; install a third-party
# package implementing `sceneapi.backends.SfmBackend` and
# register it at app startup. This `pyproject.toml` does not
# declare any backend or segmentation dependency on purpose —
# they all belong in separate packages.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "freezegun>=1.5",
    "respx>=0.21",
    "moto[s3]>=5.0",
    "pillow>=11",
]
image-processing = [
    "pillow>=11",
]
projection = [
    "opencv-python-headless>=4.10",
]
mcp = [
    "fastmcp==3.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `sfmapi` is the deprecated one-release compatibility shim over
# `sceneapi` (removed in 0.2.0).
packages = ["sceneapi", "sfm_hub", "sfmapi"]

# The I/O contract (wire codecs, storage/source protocols, schema
# contracts) lives in the sibling `sceneapi-io` package; sceneapi
# re-exports it from its historic module paths and ships the concrete
# backends that implement the protocols.
[tool.uv.sources]
sceneapi-io = { path = "../SceneIO", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast, no IO",
    "integration: hits db / fs",
    "e2e: full app, may hit redis",
    "conformance: tests/conformance — verifies SFMAPI-SPEC.md against any server",
    "contract: tests/contract — replays recorded fixtures through the SDK types",
    "needs_postgres: requires SCENEAPI_DB_URL pointing at postgres",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
# B008 = function call in default arg (FastAPI requires `Depends(...)` etc.).
# UP046 = `class Foo(Generic[T])` is the only Pydantic-compatible form pre-PEP 695.
ignore = ["E501", "B008", "UP046"]
